# Miraheze

./: .gitignore  check_no_admin_edit.py  check_unused_images.py  image_importer.py  import_sharder.py  plot_wiki_count_data.py  pyproject.toml  unused.py  user-config.py  utils.py  wiki_count_tracking.py  wiki_request_tracking.py
communities/: create_pages.py  list_wikis.py  update_everything.py  update_wiki_stats.py  wbi_helper.py  wiki_db.py  wiki_list.py  wiki_ranking.py
extension/: extension_utils.py  mark_extensions.py  populate.py  scan_untracked_extensions.py  temp.py
importing/: image_importer.py  xml_to_db.py
scripts/: batch_delete.py  custom_domains_scanner.py  monthly_sender.py
services/: mh-num-wikis.service  mh-num-wikis.timer
utils/: db_utils.py  general_utils.py  wiki_scanner.py
wiki_scanners/: analyses.py  check_no_admin_edit.py  check_unused_images.py  extension_statistics.py  site_statistics.py
wiki_scanners/sql/: earliest_wikis.sql  exempt_wikis.sql  highest_wiki_score.sql  inactive_wikis.sql  most_active_users.sql  most_articles.sql  popular_extensions.sql  popular_skins.sql  sort_by_creation_date.sql  wiki_statistics.sql
