[project]
name = "miraheze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "matplotlib>=3.10.3",
    "pywikibot>=10.0.0",
    "requests>=2.32.3",
    "waybackpack>=0.6.4",
]

#[tool.uv]
#cache-dir = "D:\\uv\\cache"
