[project]
name = "miraheze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "airium>=0.2.7",
    "beautifulsoup4>=4.13.4",
    "jsonpickle>=4.1.1",
    "langcodes>=3.5.0",
    "lxml>=6.0.1",
    "matplotlib>=3.10.3",
    "mwoauth>=0.4.0",
    "pywikibot>=10.3.0",
    "requests>=2.32.3",
    "validators>=0.35.0",
    "waybackpack>=0.6.4",
    "wikibaseintegrator>=0.12.14",
    "wikitextparser>=0.56.4",
]

#[tool.uv]
#cache-dir = "D:\\uv\\cache"
